--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -3,11 +3,11 @@
 }
 
 mat-card-title {
-    padding: 20px 0px 0px 20px;
+    padding: 30px 0px 0px 30px;
     //color: rgb(201, 200, 200,.9);
 }
 .clickable{
-    margin-left: 20px;
+    margin-left: 30px;
     //padding: 20px;
     text-decoration: none;
     color:lightgrey;
@@ -47,7 +47,7 @@ mat-card-title {
     width     : 100%;
     height    : 50%;
     margin-top: -50px;
-    padding   : 30px;
+    padding   : 70px;
     //margin-top: -100px;
 }
 
@@ -77,3 +77,20 @@ mat-card-title:not(:first-child), .mat-card-subtitle:not(:first-child){
 ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {   
     stroke: #bada55;
 }
+
+.proto-container{
+    position: absolute;
+    width: 100%;
+    z-index: 0;
+    top:10%;
+    .proto{
+      width:29%;
+      height:80vh;
+      float: left;
+      margin-left: 30px;
+      
+      //margin-top:50px;
+      border: 1px solid rgba($color:lightgrey, $alpha: .3);
+    }
+  }
+  
