--- a/src/app/modules/define-pages/displaypage/displaypage.component.html
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.html
@@ -1,36 +1,32 @@
 <mat-card class="contentbody">
-    <mat-card-title style="padding-left:23px;padding-bottom: 0px;">{{Title}}</mat-card-title>
+    <mat-card-title style="padding-bottom: 0px;">{{Title}}</mat-card-title>
     <mat-card-subtitle style="padding-bottom: 5px;" *ngIf="ParentPage.length>0">
         <span *ngIf="ParentLink!=null" style="color:lightgray">
-        <a class="clickable" [routerLink]="[ParentLink]">{{ParentPage}}</a> > {{Title}}          
-    </span>
-    <span *ngIf="ParentLink==null" style="padding: 20px;color:lightgrey">
-        <span *ngIf="ParentLink==null">{{ParentPage }}>{{ Title}}</span>
-    </span>
+            <a class="clickable" [routerLink]="[ParentLink]">{{ParentPage}}</a> > {{Title}}
+        </span>
+        <span *ngIf="ParentLink==null" style="padding: 20px;color:lightgrey">
+            <span *ngIf="ParentLink==null">{{ParentPage }}>{{ Title}}</span>
+        </span>
     </mat-card-subtitle>
     <mat-card-content>
-        <!-- <mat-progress-spinner *ngIf="loading" class="example-margin" [color]="color" [mode]="mode" [value]="value">
-        </mat-progress-spinner> -->
-        <mat-spinner  *ngIf="loading" diameter="50" style="color:white;position:relative;margin-left: 50%;"></mat-spinner>
+
+        <mat-spinner *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
 
         <div class="container">
             <div style="background-color:  var(--maincolor1);height: 5px;">&nbsp;</div>
             <img [src]="ImgUrl" style="width:100%;height: auto;object-fit: contain;">
             <!-- <img src="assets/images/schoolbuilding2018.jfif" alt="Notebook" style="width:100%;"> -->
+            
             <div class="content">
+                <div class="proto-container">
+                    <div class="proto"></div>
+                    <div class="proto"></div>
+                    <div class="proto"></div>               
+                </div>
                 <p [innerHTML]="PageBody|encodeHTML"></p>
             </div>
         </div>
 
-        <!-- <div>
-            <div>
-                <p [innerHTML]="PageBody|encodeHTML"></p>
-            </div>
-        </div> -->
-        <!-- <mat-card-actions>
-            <button mat-button (click)="back()">
-                <mat-icon>arrow_back</mat-icon>
-            </button>
-        </mat-card-actions> -->
+
     </mat-card-content>
 </mat-card>
