--- a/src/app/modules/newsdashboard/newsdashboard.component.html
+++ b/src/app/modules/newsdashboard/newsdashboard.component.html
@@ -29,7 +29,7 @@
 
     </mat-card-content>
     <mat-card-actions style="padding: 0px;">
-        <button style="margin-left:20px;" *ngIf="AllData.length>4" class="mat-raised-button"
+        <button style="margin:10px 30px;" *ngIf="AllData.length>4" class="mat-raised-button"
             (click)="allnews()">
             All news & events
         </button>
