--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -38,7 +38,7 @@ mat-card-title {
     vertical-align: middle;
 }
 
-.content {
+.center {
     position  : relative;
     bottom    : 0;
     background: rgb(0, 0, 0);
@@ -85,13 +85,14 @@ mat-card-title:not(:first-child), .mat-card-subtitle:not(:first-child){
 
 .proto-container{
     position: absolute;
-    width: 100%;
+    width: 110%;
     z-index: 0;
     border: none;
     height: 95%;
-    overflow: auto;
+    overflow-x: hidden;
+    clip-path: inset(0 12% 0 0);
     .proto{
-      width:29%;
+      width:22%;
       height:calc(100% - 110px);
       float: left;
       margin-right: 30px;
