--- a/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.scss
+++ b/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.scss
@@ -55,8 +55,8 @@ div[dir=ltr] .icon-container {
 }
 
 ::ng-deep .ng-trigger-SlideInOut {
-  //background-color: var(--mainTitleColor);
-  border:1px solid rgba($color: lightgrey, $alpha: .2);//var(--maincolor2);
+  background-color: var(--mainTitleColor);
+  //border:1px solid rgba($color: lightgrey, $alpha: .2);//var(--maincolor2);
   margin-right    : 18px;
   //padding-bottom: 1px;
 }
