--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -1,27 +1,30 @@
 :host {
-    width       : 100%;
+    width: 100%;
 }
 
 mat-card-title {
     padding: 30px 0px 0px 30px;
     //color: rgb(201, 200, 200,.9);
 }
-.clickable{
-    margin-left: 30px;
+
+.clickable {
+    margin-left    : 30px;
     //padding: 20px;
     text-decoration: none;
-    color:lightgrey;
-    
+    color          : lightgrey;
+
 }
-.clickable:hover{
-    background-color:var(--maincolor1);
+
+.clickable:hover {
+    background-color: var(--maincolor1);
 }
+
 .contentbody {
     //border-top-left-radius: 1em;
     margin-top      : 16px;
-    background-color:var(--mainTitleColor);// var(--maincolor1); //#20639b;
+    background-color: var(--mainTitleColor); // var(--maincolor1); //#20639b;
     color           : #fafafa;
-    padding: 0;
+    padding         : 0;
 }
 
 
@@ -31,7 +34,7 @@ mat-card-title {
     margin   : 0px;
     padding  : 0px;
     height   : auto;
-    display: block;
+    display  : block;
 }
 
 .container img {
@@ -49,18 +52,23 @@ mat-card-title {
     margin-top: -50px;
     padding   : 30px;
 
-    p{
+    p {
         //padding-top: 90px;
-        padding:30px;
+        padding: 30px;
     }
+
     //margin-top: -100px;
 }
 
-// @media only screen and (max-width: 600px) {
-//     .content {
-//         margin-top: -50px;
-//     }
-// }
+@media only screen and (max-width: 600px) {
+    .center {
+        padding:30px 17px 30px 17px;
+        p {
+            padding: 30px 0px 30px 0px;
+        }
+    }
+}
+
 // @media only screen and (max-width : 1279px) {
 //     .content {
 //         margin-top: -50px;
@@ -71,7 +79,8 @@ mat-card-title {
 //         margin-top: -50px;
 //     }
 // }
-mat-card-title:not(:first-child), .mat-card-subtitle:not(:first-child){
+mat-card-title:not(:first-child),
+.mat-card-subtitle:not(:first-child) {
     margin-top: -8px;
 }
 
@@ -79,28 +88,30 @@ mat-card-title:not(:first-child), .mat-card-subtitle:not(:first-child){
 .mat-card-content>:first-child {
     margin-top: 15px;
 }
-::ng-deep .mat-progress-spinner circle, .mat-spinner circle {   
+
+::ng-deep .mat-progress-spinner circle,
+.mat-spinner circle {
     stroke: #bada55;
 }
 
-.proto-container{
-    position: absolute;
-    width: 110%;
-    z-index: 0;
-    border: none;
-    height: 95%;
-    display: flex;
-    flex-wrap: nowrap;
+.proto-container {
+    position    : absolute;
+    width       : 110%;
+    z-index     : 0;
+    border      : none;
+    height      : 95%;
+    display     : flex;
+    flex-wrap   : nowrap;
     //overflow-x: hidden;
-    clip-path: inset(0 12% 0 0);
-    .proto{
-      width:22%;
-      height:calc(100% - 110px);
-      float: left;
-      margin-right: 30px;
-      margin-top:60px;  
-      //padding: 30px;
-      border: 2px solid rgba($color:grey, $alpha: .1);
+    clip-path   : inset(0 12% 0 0);
+
+    .proto {
+        width       : 22%;
+        height      : calc(100% - 110px);
+        float       : left;
+        margin-right: 30px;
+        margin-top  : 60px;
+        //padding: 30px;
+        border      : 2px solid rgba($color:grey, $alpha: .1);
     }
-  }
-  
+}
